Adicionado parte do tenis e style do tenis

--- a/tenis.html
+++ b/tenis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade A2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/styletenis.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,6 +22,24 @@
             </nav>
         </div>
     </header>
+    <div id="imagemPrincipal">
+        <img id="imgcab"src="/img/tenis1.png" style="width:100%;">
+    </div>
+    <section>
+        <div id="sessaoPrincipal">
+            <div class="tennis-card">
+                <div id="jordan1">
+                    <img src="/img/produto1.png" alt="jordan1">
+                    <div class="info">
+                  <h2>Air Jordan 1 - Chicago</h2>
+                  <p>Valor: R$15000,00</p>
+                  <p>10x R$1500,00 </p>
+                  <button type="submit" id="btnComprar"><i>Comprar</i></button>
+                </div>
+                </div>
+              </div>
+        </div>
+    </section>
     <footer>
         <div class="footer-content">
             <h3>Winx</h3>
