Att flex container

--- a/tenis.html
+++ b/tenis.html
@@ -27,19 +27,34 @@
     </div>
     <section>
         <div id="sessaoPrincipal">
-            <div class="tennis-card">
-                <div id="jordan1">
-                    <img src="/img/produto1.png" alt="jordan1">
-                    <div class="info">
-                  <h2>Air Jordan 1 - Chicago</h2>
-                  <p>Valor: R$15000,00</p>
-                  <p>10x R$1500,00 </p>
-                  <button type="submit" id="btnComprar"><i>Comprar</i></button>
-                </div>
-                </div>
+          <div class="tennis-card">
+            <div id="jordan1">
+              <img src="/img/produto1.png" alt="jordan1">
+              <div class="info">
+                <h2>Air Jordan 1 - Chicago</h2>
+                <p>Valor: R$15000,00</p>
+                <p>10x R$1500,00</p>
+                <button type="submit" id="btnComprar">
+                    Comprar
+                </button>
               </div>
+            </div>
+          </div>
+          <div class="tennis-card">
+            <div id="jordan1">
+              <img src="/img/produto2.png" alt="jordan4">
+              <div class="info">
+                <h2>Air Jordan 4 - University Blue</h2>
+                <p>Valor: R$3000,00</p>
+                <p>10x R$300,00</p>
+                <button type="submit" id="btnComprar">
+                    Comprar
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
     <footer>
         <div class="footer-content">
             <h3>Winx</h3>
