--- a/tenis.html
+++ b/tenis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade A2</title>
-    <link rel="stylesheet" href="/css/styletenis.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -27,29 +27,23 @@
     </div>
     <section>
         <div id="sessaoPrincipal">
-          <div class="tennis-card">
-            <div id="jordan1">
+          <div class="card">
+            <div id="prod">
               <img src="/img/produto1.png" alt="jordan1">
               <div class="info">
                 <h2>Air Jordan 1 - Chicago</h2>
                 <p>Valor: R$15000,00</p>
-                <p>10x R$1500,00</p>
-                <button type="submit" id="btnComprar">
-                    Comprar
-                </button>
+                <button id="btnComprar" onclick="addCar()">Comprar</button>
               </div>
             </div>
           </div>
-          <div class="tennis-card">
-            <div id="jordan1">
+          <div class="card">
+            <div id="prod">
               <img src="/img/produto2.png" alt="jordan4">
               <div class="info">
                 <h2>Air Jordan 4 - University Blue</h2>
                 <p>Valor: R$3000,00</p>
-                <p>10x R$300,00</p>
-                <button type="submit" id="btnComprar">
-                    Comprar
-                </button>
+                <button id="btnComprar">Comprar</button>
               </div>
             </div>
           </div>
