--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade A2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,7 +18,7 @@
                     <li><a href="marcas.html">Marcas</a></li>
                     <li><a href="roupas.html">Roupas</a></li>
                     <li><a href="tenis.html">Tênis</a></li>
-                    <li><a href="#">R$<strong id="val">0,00  </strong><i id="icon-item" class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="#">R$<strong id="val">  0,00  </strong><i id="icon-item" class="fa-solid fa-cart-shopping"></i></a></li>
                    </ul>
             </nav>
         </div>
@@ -55,46 +55,71 @@
     </header>
     <main>
         <h1 class="coll">Winx Collection</h1>
-        <div class="lolja">
-            <div class="item-rop">
-                <img src="img/moletomDog1.png">
-                <div>
-                    <strong>R$ 199,99</strong><br>
-                    Dogstyle
+            <div id="sessaoPrincipal">
+                <div class="card">
+                    <div id="prod">
+                        <img src="/img/produto1.png" alt="jordan1">
+                        <div class="info">
+                        <h2>Air Jordan 1 - Chicago</h2>
+                        <p>Valor: R$15.000,00</p>
+                        <button id="btnComprar" onclick="addCar(15000.00)">Comprar</button>
+                        </div>
+                    </div>
+                    </div>
+                <div class="card">
+                    <div id="prod">
+                        <img src="/img/produto2.png" alt="jordan4">
+                        <div class="info">
+                        <h2>Air Jordan 4 - University Blue</h2>
+                        <p>Valor: R$3000,00</p>
+                        <button id="btnComprar" onclick="addCar(3000.00)">Comprar</button>
+                        </div>
+                    </div>
                 </div>
-                <button onclick="addCar(199.99)">Adicionar</button>
-            </div>
-            <div class="item-rop">
-                <img src="img/moletomDog1.png">
-                <div> 
-                    <strong>R$ 50,30</strong><br>
-                    DogStyle
+                <div class="card">
+                    <div id="prod">
+                    <img src="/img/independent1.png" alt="jordan1">
+                    <div class="info">
+                        <h2>Moletom Independent</h2>
+                        <p>Valor: R$199,99</p>
+                        <button id="btnComprar" onclick="addCar(199.99)">Comprar</button>
+                    </div>
+                    </div>
                 </div>
-                <button onclick="addCar(50.30)">Adicionar</button>
             </div>
-            <div class="item-rop">
-                <img src="img/moletomDog1.png">
-                <div>
-                    <strong>R$ 199,99</strong><br>
-                    DogStyle
+            <div id="sessaoPrincipal">
+                <div class="card">
+                    <div id="prod">
+                        <img src="/img/produto1.png" alt="jordan1">
+                        <div class="info">
+                        <h2>Air Jordan 1 - Chicago</h2>
+                        <p>Valor: R$15.000,00</p>
+                        <button id="btnComprar" onclick="addCar(15000.00)">Comprar</button>
+                        </div>
+                    </div>
+                    </div>
+                <div class="card">
+                    <div id="prod">
+                        <img src="/img/produto2.png" alt="jordan4">
+                        <div class="info">
+                        <h2>Air Jordan 4 - University Blue</h2>
+                        <p>Valor: R$3000,00</p>
+                        <button id="btnComprar" onclick="addCar(3000.00)">Comprar</button>
+                        </div>
+                    </div>
                 </div>
-                <button>Adicionar</button>
+                <div class="card">
+                    <div id="prod">
+                    <img src="/img/independent1.png" alt="jordan1">
+                    <div class="info">
+                        <h2>Moletom Independent</h2>
+                        <p>Valor: R$199,99</p>
+                        <button id="btnComprar" onclick="addCar(199.99)">Comprar</button>
+                    </div>
+                    </div>
+                </div>
             </div>
-        </div> 
-        <div class="lolja">
-            <div>
-                <img src="img/moletomDog1.png">
-                DogStyle
-            </div>
-            <div>
-                <img src="img/moletomDog1.png">
-                DogStyle
-            </div>
-            <div>
-                <img src="img/moletomDog1.png">
-                DogStyle
-            </div>
-        </div> 
+            
     </main>
     <footer>
         <div class="footer-content">
