--- a/acess.html
+++ b/acess.html
@@ -26,35 +26,35 @@
         <img src="img/img1.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
-        <h1 class="coll">Marcas Parceiras</h1>
+        <h1 class="coll">Acessórios</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto1.png" alt="jordan1">
-                    <div class="info">
-                    <h2>Air Jordan 1 - Chicago</h2>
-                    <p>Valor: R$15.000,00</p>
-                    <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                    <img src="/img/acessorio_Rel1.jpg" alt="rel1">
+                    <div class="info"> 
+                    <h2>Relógio Tommy hilfiger</h2>
+                    <p>Valor: R$1000.0</p>
+                    <button id="btnComprar" onclick="addCar(1000.00, 'Relógio Tommy hilfiger')">Adicionar</button>
                     </div>
                 </div>
                 </div>
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto2.png" alt="jordan4">
+                    <img src="/img/Rel2.jpg" alt="Rel2">
                     <div class="info">
-                    <h2>Air Jordan 4 - University Blue</h2>
-                    <p>Valor: R$3000,00</p>
-                    <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                    <h2>Relógio Bulova Marine Star</h2>
+                    <p>Valor: R$4990.0 <R14990 class="0"></R14990></p>
+                    <button id="btnComprar" onclick="addCar(4990.00, 'Relógio Bulova Marine Star')">Adicionar</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div id="prod">
-                <img src="/img/independent1.png" alt="jordan1">
+                <img src="/img/Cart.jpg" alt="carteira">
                 <div class="info">
-                    <h2>Moletom Independent</h2>
-                    <p>Valor: R$199,99</p>
-                    <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                    <h2>Carteira MontBlanc Meisterstück</h2>
+                    <p>Valor: R$2699.0</p>
+                    <button id="btnComprar" onclick="addCar(2699.00, 'Carteira MontBlanc Meisterstück')">Adicionar</button>
                 </div>
                 </div>
             </div>
