Roupa and Tenis working on

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="sessaoPrincipal">
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto1.png" alt="jordan1">
+                        <img src="img/produto1.png">
                         <div class="info">
                         <h2>Air Jordan 1 - Chicago</h2>
                         <p>Valor: R$15.000,00</p>
@@ -69,7 +69,7 @@
                     </div>
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto2.png" alt="jordan4">
+                        <img src="img/produto2.png">
                         <div class="info">
                         <h2>Air Jordan 4 - University Blue</h2>
                         <p>Valor: R$3000,00</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="card">
                     <div id="prod">
-                    <img src="/img/independent1.png" alt="jordan1">
+                    <img src="img/independent1.png">
                     <div class="info">
                         <h2>Moletom Independent</h2>
                         <p>Valor: R$199,99</p>
@@ -91,31 +91,25 @@
             <div id="sessaoPrincipal">
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto1.png" alt="jordan1">
+                        <img src="img/logoJordan.png" style="height: 100%; width: 70%;">
                         <div class="info">
-                        <h2>Air Jordan 1 - Chicago</h2>
-                        <p>Valor: R$15.000,00</p>
-                        <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                        <h2>Jordan</h2>
                         </div>
                     </div>
                     </div>
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto2.png" alt="jordan4">
+                        <img src="img/anticoding.jpg" style="height: 100%; width: 70%;">
                         <div class="info">
-                        <h2>Air Jordan 4 - University Blue</h2>
-                        <p>Valor: R$3000,00</p>
-                        <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                        <h2>Anti Coding Coding Club</h2>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div id="prod">
-                    <img src="/img/independent1.png" alt="jordan1">
+                    <img src="img/Pin-Logo.png" style="height: 100%; width: 70%;">
                     <div class="info">
-                        <h2>Moletom Independent</h2>
-                        <p>Valor: R$199,99</p>
-                        <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                        <h2>HIGH</h2>                    
                     </div>
                     </div>
                 </div>
@@ -123,68 +117,35 @@
             <div id="sessaoPrincipal">
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto1.png" alt="jordan1">
+                        <img src="img/cart.png">
                         <div class="info">
-                        <h2>Air Jordan 1 - Chicago</h2>
-                        <p>Valor: R$15.000,00</p>
-                        <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                        <h2>Hip Hop - Wallet</h2>
+                        <p>Valor: R$150,00</p>
+                        <button id="btnComprar" onclick="addCar(150.00, 'Hip Hop - Wallet')">Adicionar</button>
                         </div>
                     </div>
                     </div>
                 <div class="card">
                     <div id="prod">
-                        <img src="/img/produto2.png" alt="jordan4">
+                        <img src="img/cart-street.png">
                         <div class="info">
-                        <h2>Air Jordan 4 - University Blue</h2>
-                        <p>Valor: R$3000,00</p>
-                        <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                        <h2>StreetWear Wallet</h2>
+                        <p>Valor: R$200,00</p>
+                        <button id="btnComprar" onclick="addCar(200.00, 'StreetWear Wallet')">Adicionar</button>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div id="prod">
-                    <img src="/img/independent1.png" alt="jordan1">
+                    <img src="img/cart-compton.png">
                     <div class="info">
-                        <h2>Moletom Independent</h2>
+                        <h2>Compton Wallet</h2>
                         <p>Valor: R$199,99</p>
-                        <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                        <button id="btnComprar" onclick="addCar(199.99, 'Compton Wallet')">Adicionar</button>
                     </div>
                     </div>
                 </div>
             </div>
-            <div id="sessaoPrincipal">
-                <div class="card">
-                    <div id="prod">
-                        <img src="/img/produto1.png" alt="jordan1">
-                        <div class="info">
-                        <h2>Air Jordan 1 - Chicago</h2>
-                        <p>Valor: R$15.000,00</p>
-                        <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
-                        </div>
-                    </div>
-                    </div>
-                <div class="card">
-                    <div id="prod">
-                        <img src="/img/produto2.png" alt="jordan4">
-                        <div class="info">
-                        <h2>Air Jordan 4 - University Blue</h2>
-                        <p>Valor: R$3000,00</p>
-                        <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div id="prod">
-                    <img src="/img/independent1.png" alt="jordan1">
-                    <div class="info">
-                        <h2>Moletom Independent</h2>
-                        <p>Valor: R$199,99</p>
-                        <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            
     </main>
     <footer>
         <div class="footer-content">
