--- a/marcas.html
+++ b/marcas.html
@@ -23,38 +23,83 @@
                    </ul>
             </nav>
         </div>
-        <img src="img/img1.jpg" alt="Roupa de StreetWear" style="width: 100%;">
+        <img src="img/MidWallpaper.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
         <h1 class="coll">Marcas Parceiras</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto1.png" alt="jordan1">
+                    <img src="img/logoJordan.png" style="height: 100%; width: 70%;">
                     <div class="info">
-                    <h2>Air Jordan 1 - Chicago</h2>
-                    <p>Valor: R$15.000,00</p>
-                    <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                    <h2>Jordan</h2>
                     </div>
                 </div>
                 </div>
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto2.png" alt="jordan4">
+                    <img src="img/anticoding.jpg" style="height: 100%; width: 70%;">
                     <div class="info">
-                    <h2>Air Jordan 4 - University Blue</h2>
-                    <p>Valor: R$3000,00</p>
-                    <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                    <h2>Anti Coding Coding Club</h2>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div id="prod">
-                <img src="/img/independent1.png" alt="jordan1">
+                <img src="img/Pin-Logo.png" style="height: 100%; width: 70%;">
                 <div class="info">
-                    <h2>Moletom Independent</h2>
-                    <p>Valor: R$199,99</p>
-                    <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                    <h2>HIGH</h2>                    
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/lacoste.png" style="height: 100%; width: 70%;">
+                    <div class="info">
+                    <h2>Lacoste</h2>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/versace.png" style="height: 100%; width: 70%;">
+                    <div class="info">
+                    <h2>Versace</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/gucci.png" style="height: 100%; width: 70%;">
+                <div class="info">
+                    <h2>Gucci</h2>                    
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/adidas.png" style="height: 100%; width: 70%;">
+                    <div class="info">
+                    <h2>Adidas</h2>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/nike.png" style="height: 100%; width: 70%;">
+                    <div class="info">
+                    <h2>Nike</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/puma.png" style="height: 100%; width: 80%;">
+                <div class="info">                
                 </div>
                 </div>
             </div>
