--- a/tenis.html
+++ b/tenis.html
@@ -32,7 +32,7 @@
         <div id="sessaoPrincipal">
           <div class="card">
             <div id="prod">
-              <img src="/img/produto1.png" alt="jordan1">
+              <img src="/img/produto1.png">
               <div class="info">
                 <h2>Air Jordan 1 - Chicago</h2>
                 <p>Valor: R$15000,00</p>
@@ -42,7 +42,7 @@
           </div>
           <div class="card">
             <div id="prod">
-              <img src="/img/produto2.png" alt="jordan4">
+              <img src="/img/produto2.png">
               <div class="info">
                 <h2>Air Jordan 4 - University Blue</h2>
                 <p>Valor: R$3000,00</p>
