--- a/acess.html
+++ b/acess.html
@@ -23,38 +23,102 @@
                    </ul>
             </nav>
         </div>
-        <img src="img/img1.jpg" alt="Roupa de StreetWear" style="width: 100%;">
+        <img src="img/acessWallpaper.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
         <h1 class="coll">Marcas Parceiras</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto1.png" alt="jordan1">
+                    <img src="img/cart.png">
                     <div class="info">
-                    <h2>Air Jordan 1 - Chicago</h2>
-                    <p>Valor: R$15.000,00</p>
-                    <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                    <h2>Hip Hop - Wallet</h2>
+                    <p>Valor: R$150,00</p>
+                    <button id="btnComprar" onclick="addCar(150.00, 'Hip Hop - Wallet')">Adicionar</button>
                     </div>
                 </div>
                 </div>
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto2.png" alt="jordan4">
+                    <img src="img/cart-street.png">
                     <div class="info">
-                    <h2>Air Jordan 4 - University Blue</h2>
-                    <p>Valor: R$3000,00</p>
-                    <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                    <h2>StreetWear Wallet</h2>
+                    <p>Valor: R$200,00</p>
+                    <button id="btnComprar" onclick="addCar(200.00, 'StreetWear Wallet')">Adicionar</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div id="prod">
-                <img src="/img/independent1.png" alt="jordan1">
+                <img src="img/cart-compton.png">
                 <div class="info">
-                    <h2>Moletom Independent</h2>
+                    <h2>Compton Wallet</h2>
                     <p>Valor: R$199,99</p>
-                    <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                    <button id="btnComprar" onclick="addCar(199.99, 'Compton Wallet')">Adicionar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/watchAdidas.png">
+                    <div class="info">
+                    <h2>Watch Adidas</h2>
+                    <p>Valor: R$2150,00</p>
+                    <button id="btnComprar" onclick="addCar(2150.00, 'Watch Adidas')">Adicionar</button>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/watchVersace.png">
+                    <div class="info">
+                    <h2>Watch Versace</h2>
+                    <p>Valor: R$90000,00</p>
+                    <button id="btnComprar" onclick="addCar(90000.00, 'Watch Versace')">Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/watchGold.png">
+                <div class="info">
+                    <h2>Golden Watch</h2>
+                    <p>Valor: R$199,99</p>
+                    <button id="btnComprar" onclick="addCar(199.99, 'Golden Watch')">Adicionar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/bonePolvo.png">
+                    <div class="info">
+                    <h2>Bone Polvo</h2>
+                    <p>Valor: R$90,00</p>
+                    <button id="btnComprar" onclick="addCar(90.00, 'Bone Polvo')">Adicionar</button>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/boneBrasil.png">
+                    <div class="info">
+                    <h2>Bone Brasil</h2>
+                    <p>Valor: R$100,00</p>
+                    <button id="btnComprar" onclick="addCar(100.00, 'Bone Brasil')">Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/boneCorreria.png">
+                <div class="info">
+                    <h2>Bone Correria</h2>
+                    <p>Valor: R$199,99</p>
+                    <button id="btnComprar" onclick="addCar(199.99, 'Bone Correria')">Adicionar</button>
                 </div>
                 </div>
             </div>
