--- a/roupas.html
+++ b/roupas.html
@@ -23,14 +23,14 @@
                    </ul>
             </nav>
         </div>
-        <img src="img/img1.jpg" alt="Roupa de StreetWear" style="width: 100%;">
+        <img src="img/roupasWallpaper.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
         <h1 class="coll">Marcas Parceiras</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto1.png" alt="jordan1">
+                    <img src="img/produto1.png">
                     <div class="info">
                     <h2>Air Jordan 1 - Chicago</h2>
                     <p>Valor: R$15.000,00</p>
@@ -40,7 +40,7 @@
                 </div>
             <div class="card">
                 <div id="prod">
-                    <img src="/img/produto2.png" alt="jordan4">
+                    <img src="img/produto2.png">
                     <div class="info">
                     <h2>Air Jordan 4 - University Blue</h2>
                     <p>Valor: R$3000,00</p>
@@ -50,7 +50,7 @@
             </div>
             <div class="card">
                 <div id="prod">
-                <img src="/img/independent1.png" alt="jordan1">
+                <img src="img/independent1.png">
                 <div class="info">
                     <h2>Moletom Independent</h2>
                     <p>Valor: R$199,99</p>
