--- a/acess.html
+++ b/acess.html
@@ -26,7 +26,7 @@
         <img src="img/acessWallpaper.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
-        <h1 class="coll">Marcas Parceiras</h1>
+        <h1 class="coll">Acessórios</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
@@ -64,7 +64,7 @@
                 <div id="prod">
                     <img src="img/watchAdidas.png">
                     <div class="info">
-                    <h2>Watch Adidas</h2>
+                    <h2>Adidas Relógio</h2>
                     <p>Valor: R$2150,00</p>
                     <button id="btnComprar" onclick="addCar(2150.00, 'Watch Adidas')">Adicionar</button>
                     </div>
@@ -74,7 +74,7 @@
                 <div id="prod">
                     <img src="img/watchVersace.png">
                     <div class="info">
-                    <h2>Watch Versace</h2>
+                    <h2>Versace Relógio</h2>
                     <p>Valor: R$90000,00</p>
                     <button id="btnComprar" onclick="addCar(90000.00, 'Watch Versace')">Adicionar</button>
                     </div>
@@ -96,7 +96,7 @@
                 <div id="prod">
                     <img src="img/bonePolvo.png">
                     <div class="info">
-                    <h2>Bone Polvo</h2>
+                    <h2>Boné Polvo</h2>
                     <p>Valor: R$90,00</p>
                     <button id="btnComprar" onclick="addCar(90.00, 'Bone Polvo')">Adicionar</button>
                     </div>
@@ -106,7 +106,7 @@
                 <div id="prod">
                     <img src="img/boneBrasil.png">
                     <div class="info">
-                    <h2>Bone Brasil</h2>
+                    <h2>Boné Brasil</h2>
                     <p>Valor: R$100,00</p>
                     <button id="btnComprar" onclick="addCar(100.00, 'Bone Brasil')">Adicionar</button>
                     </div>
@@ -116,7 +116,7 @@
                 <div id="prod">
                 <img src="img/boneCorreria.png">
                 <div class="info">
-                    <h2>Bone Correria</h2>
+                    <h2>Boné Correria</h2>
                     <p>Valor: R$199,99</p>
                     <button id="btnComprar" onclick="addCar(199.99, 'Bone Correria')">Adicionar</button>
                 </div>
