--- a/roupas.html
+++ b/roupas.html
@@ -26,25 +26,25 @@
         <img src="img/roupasWallpaper.jpg" alt="Roupa de StreetWear" style="width: 100%;">
     </header>
     <main>
-        <h1 class="coll">Marcas Parceiras</h1>
+        <h1 class="coll">Coleção de Roupas</h1>
         <div id="sessaoPrincipal">
             <div class="card">
                 <div id="prod">
-                    <img src="img/produto1.png">
+                    <img src="img/jordan.png">
                     <div class="info">
-                    <h2>Air Jordan 1 - Chicago</h2>
-                    <p>Valor: R$15.000,00</p>
-                    <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                    <h2>Camiseta Jordan Básica</h2>
+                    <p>Valor: R$200,00</p>
+                    <button id="btnComprar" onclick="addCar(200.00, 'Camiseta Jordan Básica')">Adicionar</button>
                     </div>
                 </div>
                 </div>
             <div class="card">
                 <div id="prod">
-                    <img src="img/produto2.png">
+                    <img src="img/highPopeye.png">
                     <div class="info">
-                    <h2>Air Jordan 4 - University Blue</h2>
+                    <h2>High Popeye</h2>
                     <p>Valor: R$3000,00</p>
-                    <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                    <button id="btnComprar" onclick="addCar(3000.00, 'High Popeye')">Adicionar</button>
                     </div>
                 </div>
             </div>
@@ -55,6 +55,70 @@
                     <h2>Moletom Independent</h2>
                     <p>Valor: R$199,99</p>
                     <button id="btnComprar" onclick="addCar(199.99, 'Moletom Independent')">Adicionar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/anticoding.png">
+                    <div class="info">
+                    <h2>Camiseta AntiCoding Básica</h2>
+                    <p>Valor: R$150,00</p>
+                    <button id="btnComprar" onclick="addCar(150.00, 'Camiseta AntiCoding Básica')">Adicionar</button>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/lacosteCamisa.png">
+                    <div class="info">
+                    <h2>Moletom Lacoste</h2>
+                    <p>Valor: R$500,00</p>
+                    <button id="btnComprar" onclick="addCar(500.00, 'Moletom Lacoste')">Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/moletomNike.png">
+                <div class="info">
+                    <h2>Moletom Nike</h2>
+                    <p>Valor: R$199,99</p>
+                    <button id="btnComprar" onclick="addCar(199.99, 'Moletom Nike')">Adicionar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/moletomDog1.png">
+                    <div class="info">
+                    <h2>Moletom Wanted</h2>
+                    <p>Valor: R$190,00</p>
+                    <button id="btnComprar" onclick="addCar(190.00, 'Moletom Wanted')">Adicionar</button>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/gucciCamisa.png">
+                    <div class="info">
+                    <h2>Camisa Gucci</h2>
+                    <p>Valor: R$2000,00</p>
+                    <button id="btnComprar" onclick="addCar(2000.00, 'Camisa Gucci')">Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/cortaVentoAdidas.png">
+                <div class="info">
+                    <h2>Corta Vento Adidas</h2>
+                    <p>Valor: R$199,99</p>
+                    <button id="btnComprar" onclick="addCar(199.99, 'Corta Vento Adidas')">Adicionar</button>
                 </div>
                 </div>
             </div>
