--- a/tenis.html
+++ b/tenis.html
@@ -28,28 +28,102 @@
         <img id="imgcab"src="/img/tenis1.png" style="width:100%;">
     </div>
     <section>
-      <h1 class="coll">Collection</h1>
-        <div id="sessaoPrincipal">
-          <div class="card">
-            <div id="prod">
-              <img src="/img/produto1.png">
-              <div class="info">
-                <h2>Air Jordan 1 - Chicago</h2>
-                <p>Valor: R$15000,00</p>
-                <button id="btnComprar" onclick="addCar()">Comprar</button>
-              </div>
+      <h1 class="coll">Coleção de Tênis</h1>
+            <div id="sessaoPrincipal">
+                <div class="card">
+                    <div id="prod">
+                        <img src="img/produto1.png">
+                        <div class="info">
+                        <h2>Air Jordan 1 - Chicago</h2>
+                        <p>Valor: R$15.000,00</p>
+                        <button id="btnComprar" onclick="addCar(15000.00, 'Air Jordan 1 - Chicago')">Adicionar</button>
+                        </div>
+                    </div>
+                    </div>
+                <div class="card">
+                    <div id="prod">
+                        <img src="img/produto2.png">
+                        <div class="info">
+                        <h2>Air Jordan 4 - University Blue</h2>
+                        <p>Valor: R$3000,00</p>
+                        <button id="btnComprar" onclick="addCar(3000.00, 'Air Jordan 4 - University Blue')">Adicionar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div id="prod">
+                    <img src="img/jordanOffWhite.png">
+                    <div class="info">
+                        <h2> Air Jordan 4 - Retro x Off White</h2>
+                        <p>Valor: R$2999,99</p>
+                        <button id="btnComprar" onclick="addCar(2999.99, ' Air Jordan 4 Retro x Off White')">Adicionar</button>
+                    </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="card">
-            <div id="prod">
-              <img src="/img/produto2.png">
-              <div class="info">
-                <h2>Air Jordan 4 - University Blue</h2>
-                <p>Valor: R$3000,00</p>
-                <button id="btnComprar">Comprar</button>
+            <div id="sessaoPrincipal">
+              <div class="card">
+                  <div id="prod">
+                      <img src="img/jordanTech.png">
+                      <div class="info">
+                      <h2>Air Jordan 4 - Tech White</h2>
+                      <p>Valor: R$800,00</p>
+                      <button id="btnComprar" onclick="addCar(800.00, 'Air Jordan 4 Tech White')">Adicionar</button>
+                      </div>
+                  </div>
+                  </div>
+              <div class="card">
+                  <div id="prod">
+                      <img src="img/jordanCement.png">
+                      <div class="info">
+                      <h2>Air Jordan 4 Retro - White Cement</h2>
+                      <p>Valor: R$2000,00</p>
+                      <button id="btnComprar" onclick="addCar(2000.00, 'Air Jordan 4 Retro - White Cement')">Adicionar</button>
+                      </div>
+                  </div>
               </div>
-            </div>
+              <div class="card">
+                  <div id="prod">
+                  <img src="img/jordanBlackCat.png">
+                  <div class="info">
+                      <h2> Air Jordan 4 Retro - Black Cat</h2>
+                      <p>Valor: R$600,00</p>
+                      <button id="btnComprar" onclick="addCar(600.00, 'Air Jordan 4 Retro - Black Cat')">Adicionar</button>
+                  </div>
+                  </div>
+              </div>
           </div>
+          <div id="sessaoPrincipal">
+            <div class="card">
+                <div id="prod">
+                    <img src="img/nikeZoomFreak1.png">
+                    <div class="info">
+                    <h2>Nike Zoom Freak 1</h2>
+                    <p>Valor: R$300,00</p>
+                    <button id="btnComprar" onclick="addCar(300.00, 'Nike Zoom Freak 1')">Adicionar</button>
+                    </div>
+                </div>
+                </div>
+            <div class="card">
+                <div id="prod">
+                    <img src="img/AirJordan.png">
+                    <div class="info">
+                    <h2>Air Jordan 11 - Retro "Concord"</h2>
+                    <p>Valor: R$500,00</p>
+                    <button id="btnComprar" onclick="addCar(500.00, 'Air Jordan 11 - Retro Concord')">Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="prod">
+                <img src="img/airJodanCherry.png">
+                <div class="info">
+                    <h2> Jordan 11 - Retro Cherry</h2>
+                    <p>Valor: R$1000,00</p>
+                    <button id="btnComprar" onclick="addCar(1000.00, 'Jordan 11 - Retro Cherry')">Adicionar</button>
+                </div>
+                </div>
+            </div>
         </div>
       </section>
     <footer>
