--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-        <img src="img/img1.jpg" style="width:100%">
+        <img src="img/img4.jpg" style="width:100%">
         </div>
     
         <div class="mySlides fade">
-        <img src="img/img2.jpg" style="width:100%">
+        <img src="img/img1.jpg" style="width:100%">
         </div>
     
         <div class="mySlides fade">
@@ -41,7 +41,7 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="img/img4.jpg" style="width:100%">
+            <img src="img/img2.jpg" style="width:100%">
         </div>
 
         <div class="mySlides fade">
@@ -49,8 +49,8 @@
         </div>
 
         <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-backward"></i></a>
-        <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-forward"></i></a>
+        <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-backward" style="color: whitesmoke"></i></a>
+        <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-forward" style="color: whitesmoke"></i></a>
     </div>
 
     </header>
