fix some issues

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div id="prod">
                         <img src="img/cart-street.png">
                         <div class="info">
-                        <h2>StreetWear Wallet</h2>
+                        <h2>StreetWear - Wallet</h2>
                         <p>Valor: R$200,00</p>
                         <button id="btnComprar" onclick="addCar(200.00, 'StreetWear Wallet')">Adicionar</button>
                         </div>
@@ -139,7 +139,7 @@
                     <div id="prod">
                     <img src="img/cart-compton.png">
                     <div class="info">
-                        <h2>Compton Wallet</h2>
+                        <h2>Compton - Wallet</h2>
                         <p>Valor: R$199,99</p>
                         <button id="btnComprar" onclick="addCar(199.99, 'Compton Wallet')">Adicionar</button>
                     </div>
