--- a/acess.html
+++ b/acess.html
@@ -42,7 +42,7 @@
                 <div id="prod">
                     <img src="img/cart-street.png">
                     <div class="info">
-                    <h2>StreetWear Wallet</h2>
+                    <h2>StreetWear - Wallet</h2>
                     <p>Valor: R$200,00</p>
                     <button id="btnComprar" onclick="addCar(200.00, 'StreetWear Wallet')">Adicionar</button>
                     </div>
@@ -52,7 +52,7 @@
                 <div id="prod">
                 <img src="img/cart-compton.png">
                 <div class="info">
-                    <h2>Compton Wallet</h2>
+                    <h2>Compton - Wallet</h2>
                     <p>Valor: R$199,99</p>
                     <button id="btnComprar" onclick="addCar(199.99, 'Compton Wallet')">Adicionar</button>
                 </div>
@@ -64,7 +64,7 @@
                 <div id="prod">
                     <img src="img/watchAdidas.png">
                     <div class="info">
-                    <h2>Adidas Relógio</h2>
+                    <h2>Adidas - Relógio</h2>
                     <p>Valor: R$2150,00</p>
                     <button id="btnComprar" onclick="addCar(2150.00, 'Watch Adidas')">Adicionar</button>
                     </div>
@@ -74,7 +74,7 @@
                 <div id="prod">
                     <img src="img/watchVersace.png">
                     <div class="info">
-                    <h2>Versace Relógio</h2>
+                    <h2>Versace - Relógio</h2>
                     <p>Valor: R$90000,00</p>
                     <button id="btnComprar" onclick="addCar(90000.00, 'Watch Versace')">Adicionar</button>
                     </div>
