add some comments

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </nav>
         </div>
 
-            <!-- Slideshow container -->
+            <!-- Local onde irá ocorrer o carrosel -->
     <div class="slideshow-container">
 
-        <!-- Full-width images with number and caption text -->
+        <!-- Classe e imagens, para manipulação no js -->
         <div class="mySlides fade">
         <img src="img/img4.jpg" style="width:100%">
         </div>
@@ -48,7 +48,8 @@
         <img src="img/img5.jpg" style="width:100%">
         </div>
 
-        <!-- Next and previous buttons -->
+        
+        <!-- Botões de prox e anterior, passando parametro de +1 ou -1 -->
         <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-backward" style="color: whitesmoke"></i></a>
         <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-forward" style="color: whitesmoke"></i></a>
     </div>
